# hka-agentic-raumzeit-bot

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  GEMINI.md  LICENSE  LXC_DEPLOYMENT.md  Makefile  README.md  TODO.md  debug_meals.py  fehler-netzwerk?.md  init.sh  pyproject.toml  test_feedback_migration.py  verbesserungen.txt  verbesserungen2.txt  verbesserungen3.txt
.claude/: settings.local.json
.gemini/: issue_planner.md  session_log.md  strategist.md
.gemini/logs/: 2026-04-20a.md  2026-04-20b.md  2026-04-23.md  2026-04-30.md  2026-05-01-mensa-hygiene-plan.md  2026-05-01-personalization-plan.md  2026-05-02.md
.gemini/prompts/: problem.md  verbesserung_feedback.md  verbesserung_hilfe.md  verbesserung_logging.md  verbesserung_mensa_db.md
.gemini_agents/: session_log.md
.gemini_agents/prompts/: fix_course_mapping.txt  problem.md
.gemini_agents/skills/: issue-fixer.skill  issue-planner.skill  qa-reviewer.skill  strategist.skill
docs/: AGENTS.md  CHANGELOG.md  DSGVO.md  LIBRARIES.md  mensa_debug.md
features/done/: dekodierung-allergene.md  dynamic-e2e-testing.md  e2e-testing.md  fehlermeldungen-als-issue-speichern.md  (+4 more)
scripts/: analyze_map.py  api.py  check.py  generate_e2e_fixtures.py  generate_maps.py
src/: admin.py  agent.py  bot.py  config.py  conflicts.py  db.py  formatter.py  privacy.py  router.py  state.py  terminal.py  tools.py
tests/: conftest.py  test_e2e.py  test_help_ux.py  test_mensa_hygiene.py  test_next_occurrence.py  test_personal_config.py  test_personalization.py  test_privacy.py  test_router.py
(+65 files in other folders)
